# Huffman-archiver

./: CMakeLists.txt
include/: CLI.h  Huffman.hpp  HuffmanArchiver.hpp  IOBitIterator.hpp  main.h
src/: CLI.cpp  Huffman.cpp  HuffmanArchiver.cpp  IOBitIterator.cpp  main.cpp
test/: CLITest.cpp  CompressTests.cpp  EndToEndTests.cpp  IOBitIteratorTest.cpp  TreeBuildTest.cpp
